crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI032_PYI032.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI032.pyi:6:22: PYI032 [*] Prefer `object` to `Any` for the second parameter in __eq__
  |
6 | class Bad:
7 |     def __eq__(self, other: Any) -> bool: ...  # Y032
  |                      ^^^^^^^^^^ PYI032
8 |     def __ne__(self, other: typing.Any) -> typing.Any: ...  # Y032
  |
  = help: Replace `object` with `Any`

ℹ Fix
3 3 | 
4 4 | 
5 5 | class Bad:
6   |-    def __eq__(self, other: Any) -> bool: ...  # Y032
  6 |+    def __eq__(self, other: object) -> bool: ...  # Y032
7 7 |     def __ne__(self, other: typing.Any) -> typing.Any: ...  # Y032
8 8 | 
9 9 | 

PYI032.pyi:7:22: PYI032 [*] Prefer `object` to `Any` for the second parameter in __ne__
  |
7 | class Bad:
8 |     def __eq__(self, other: Any) -> bool: ...  # Y032
9 |     def __ne__(self, other: typing.Any) -> typing.Any: ...  # Y032
  |                      ^^^^^^^^^^^^^^^^^ PYI032
  |
  = help: Replace `object` with `Any`

ℹ Fix
4 4 | 
5 5 | class Bad:
6 6 |     def __eq__(self, other: Any) -> bool: ...  # Y032
7   |-    def __ne__(self, other: typing.Any) -> typing.Any: ...  # Y032
  7 |+    def __ne__(self, other: object) -> typing.Any: ...  # Y032
8 8 | 
9 9 | 
10 10 | class Good:


